envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 65000
layered_runtime:
  layers:
    - name: static-layer
      static_layer:
        envoy.reloadable_features.http1_use_balsa_parser: true
        envoy.reloadable_features.http2_use_oghttp2: true
        envoy.resource_limits.listener.proxy.connection_limit: 1000
        overload.global_downstream_max_connections: 1000
static_resources:
  clusters:
    - name: extauthz
      type: LOGICAL_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      connect_timeout: 20s
      load_assignment:
        cluster_name: extauthz
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: extauthz
                    port_value: 10000
    - name: httpbin
      type: LOGICAL_DNS
      connect_timeout: 20s
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: httpbin
                    port_value: 80
  listeners:
    - name: listener
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog"
                      log_format:
                        json_format:
                          timestamp: "%START_TIME%"
                          code: "%RESPONSE_CODE%"
                          proto: "%PROTOCOL%"
                          method: "%REQ(:METHOD)%"
                          flags: "%RESPONSE_FLAGS%"
                          host: "%REQ(:AUTHORITY)%"
                codec_type: AUTO
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz"
                      transport_api_version: "V3"
                      include_peer_certificate: true
                      grpc_service:
                        envoy_grpc:
                          cluster_name: extauthz
                        timeout: 2s
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: httpbin
                stat_prefix: listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      traffic_direction: OUTBOUND
